--- a/freeMathResources.html
+++ b/freeMathResources.html
@@ -329,15 +329,16 @@
       <a href="https://www.linkedin.com/in/abdullahameen/" target="_blank" data-toggle="tooltip" title="Contact me through LinkedIn"><img src="mathisfun/img/linkedin.png" style="width:35px;height:35px;border-radius:25px;"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
       <a href="https://twitter.com/AbdullahAmeenn?lang=en" target="_blank" data-toggle="tooltip" title="Contact me through Twitter"><img src="mathisfun/img/twitter.png" style="width:35px;height:35px;border-radius:25px;"></a>
     </div>
-  </div>
-</div><br>
+  </div><br>
+  <small style="text-align:center">© Copyright 2022, Abdullah Ameen.</small>
+</div>
 <div class="container" style="text-align:right; padding-left:200px;">
   <div class="row">
     <div class="col-lg-12">
       <a href="#FrontPage"><img src="mathisfun/img/BackToMainPage.png" style="width:82px;height:100px;border-radius:20px; float: right;"></a>
     </div>
   </div>
-</div><br><br>
+</div><br><br><br><br><br>
 
 
 <script type="text/javascript" src="mathisfun/js/jquery-3.4.1.min.js"></script>
